--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,7 @@
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+                <p><img src="imagenes/istockphoto-1452604857.jpg" width="100%"/></p>
                 <p>Los blogs son la mejor forma de compartir información e ideas.   Mucho más que ir a conferencias y salir en Youtube.   Excepto si eres un Rockstar.   Pero estadísticamente no lo eres... por ahora</p>
                 <p>Suscribete y dale like (Y)</p>
             </div>
